--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="js/bxslider/jquery.bxslider.min.css">
+    <link rel="stylesheet" href="css/mystyle.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bxslider/jquery.bxslider.min.js"></script>
 </head>
 <body>
-    홈페이지
+    <div class="wrap">
+        <div class="container">
+            <div class="row slide-wrap1">
+                <ul id="slides1">
+                    <li class="item"><img src="images/daisies.jpg" alt=""></li>
+                    <li class="item"><img src="images/plant.jpg" alt=""></li>
+                    <li class="item"><img src="images/succulents.jpg" alt=""></li>
+                </ul>
+            </div>
+            <div class="row slide-wrap2">
+                <div id="slides2">
+                    <div class="item"><img src="images/coffee1.jpg" alt=""></div>
+                    <div class="item"><img src="images/coffee2.jpg" alt=""></div>
+                    <div class="item"><img src="images/coffee3.jpg" alt=""></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="js/myscript.js"></script>
 </body>
 </html>
